fixed issue where header navigation menus were not scrollable on mobile devices

--- a/imports/client/styles/components/_header.scss
+++ b/imports/client/styles/components/_header.scss
@@ -16,8 +16,11 @@
   justify-content: space-between;
   margin: 0 auto;
   max-width: $site-max-width;
+  overflow-y: scroll;
   padding-left: $default-space;
   padding-right: $default-space;
+
+  -webkit-overflow-scrolling: touch;    // TODO - are there any other mobile-specific styles?
 }
 
 .header__content-left {
